# nvdbapiv4

./: LICENSE  README.md  nvdbgeotricks.py  pyproject.toml  qgis3script-importernvdbdata.py  skrivnvdb.py
nvdbapiv4/: __init__.py  apiforbindelse.py  nvdbapiv4.py
